--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
   <body>
     <header>
       <nav>
-        <button>Restaurant</button>
+        <button id="title">Restaurant</button>
         <div>
-            <button>Home</button>
+            <button>Book</button>
             <button>Menu</button>
             <button>About</button>
         </div>
