page swap functionality

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
       <nav>
         <button id="title">Restaurant</button>
         <div>
-            <button>Book</button>
-            <button>Menu</button>
-            <button>About</button>
+            <button id="booking-btn">Book</button>
+            <button id="menu">Menu</button>
+            <button id="about">About</button>
         </div>
       </nav>
     </header>
