change structure to page parent

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
         <button id="title">Restaurant</button>
         <div>
             <button id="booking-btn">Book</button>
-            <button id="menu">Menu</button>
-            <button id="about">About</button>
+            <button id="menu-btn">Menu</button>
+            <button id="about-btn">About</button>
         </div>
       </nav>
     </header>
